--- a/sgn/pubspec.yaml
+++ b/sgn/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^1.7.2
   mobx_codegen: ^1.0.3
+  url_launcher: 5.4.5
   flutter_test:
     sdk: flutter
 
